added cli support, and cron syntax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "Automatic data gathering from sensors for hydroponics."
 authors = ["Kovas Palunas <kovas.palunas@gmail.com>"]
 
+[tool.poetry.scripts]
+plant-data = "plant_data.main:main"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 google-api-python-client = "^2.0.2"
@@ -13,6 +16,7 @@ board = "^1.0"
 adafruit-blinka = "^6.4.1"
 "RPi.GPIO" = "^0.7.0"
 pigpio = "^1.78"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 
